# PyPDFCompare

./: PyPDFCompare.py  PyPDFCompare_gui.py  PyPDFCompare_temp.py  README.md  pyproject.toml  settings.json
